--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,18 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <input type="text" autofocus id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
     <script src="index.js" type="module"></script>
   </body>
 </html>
+
+<!-- .then(response => {
+      if ((response.message = 'Not Found')) {
+        console.log('Oops, there is no country with that name');
+        return;
+      }
+    })
+    }) -->
